# Gatherraa

app/backend/: package.json
app/backend/src/cache/: cache.module.ts
app/backend/src/cache/controllers/: cache-management.controller.ts
app/backend/src/cache/services/: advanced-cache.service.ts  cache-analytics.service.ts  cache-fallback.service.ts  cache-invalidation.service.ts  cache-performance.service.ts  cache-serialization.service.ts  cache-warmup.service.ts  multi-level-cache.service.ts
app/frontend/app/dashboard/: page.tsx
app/frontend/lib/offline/: OfflineContext.tsx  conflictResolver.ts
contract/contracts/: Cargo.toml
