[package]
name = "staking-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "staking_contract"

[dependencies]
soroban-sdk = "23.4.1"

[dev-dependencies]
soroban-sdk = { version = "23.4.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
